[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scenes/World/Overworld/main_land/sign.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/world/sign.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.392157, 0.247059, 0.109804, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.227451, 0.117647, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="sign" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="sign_text" type="Node2D" parent="."]
visible = false
z_index = 1024

[node name="Panel" type="Panel" parent="sign_text"]
margin_left = -48.0
margin_top = -56.0
margin_right = 48.0
margin_bottom = -16.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="sign_text/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 180.0
margin_bottom = 68.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "WHAT, YOU JUST GONNA KEEP STARING?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
